Add initial project structure and implement PlanController with tests
- Created Maven project structure with necessary directories and files.
- Added `pom.properties` for project metadata.
- Implemented `PlanController` and its corresponding test class `PlanControllerTest`.
- Configured Maven compiler plugin and Surefire reports for test execution.
- Added test cases for `PlanController` to validate functionality.
- Included secrets file for client credentials (ensure to handle securely).